replace method of max content from overflow to slice, smalls fixs for optimization

--- a/client/src/entities/blog/ui/Blog.module.scss
+++ b/client/src/entities/blog/ui/Blog.module.scss
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: row;
     gap: 40px;
-    overflow-x: hidden;
 
   }
   &__card {
