--- a/client/src/entities/product/ui/Product.module.scss
+++ b/client/src/entities/product/ui/Product.module.scss
@@ -14,7 +14,6 @@
       display: flex;
       flex-flow: row nowrap;
       gap: 40px;
-      overflow-x: hidden;
 
       .product__card {
         width: 272px;
